--- a/1.WF_SC_Repositories.md
+++ b/1.WF_SC_Repositories.md
@@ -1,1 +1,5 @@
 # How to prepare the workflow registry repository and software catalog repository
+
+![Captura desde 2024-02-19 12-37-51](https://github.com/EvaHdez97/Image-creation-tutorial/assets/158464827/8377b287-5d93-4016-ac96-a8ea8b023648)
+
+
