--- a/1.WF_SC_Repositories.md
+++ b/1.WF_SC_Repositories.md
@@ -2,4 +2,43 @@
 
 ![Captura desde 2024-02-19 12-37-51](https://github.com/EvaHdez97/Image-creation-tutorial/assets/158464827/8377b287-5d93-4016-ac96-a8ea8b023648)
 
+## Workflow Components
 
+workflow-registry
+  |- workflow_1
+  |    |- step_1
+  |    |    |- eflows4hpc.yaml               
+  |    |    |- src                     
+  |    |       ...
+  |    |- step_2
+  |         ....
+  |- workflow_2                                
+  |	...
+
+- Workflow_1 subfolder: Name of the DTC (Digital Twin Component) and the initial type of the DTC (V-Volcano, T-Tsunami, E-Earthquake,...)
+- Step_1 subfolder: Name of the software of the DTC (METEO-GFS)
+- eflows4hpc.yaml file: Sofware requirements for this workflow step as a Spack environment specification (Contains the same information as the Spack.yaml file.)
+- src folder: Folder to save all necessary files for running the software.
+
+## Software Catalog Components
+
+software-catalog
+  |- packages
+  |    |- software_1  Spack package name    
+  |    |    |- package.py		Installation description following the Spack package format
+  |    |       ...
+  |    |- software_2    
+  |          ....
+  |- cfg				Spack configuration used by the Image Creation Service
+  |    |-packages.yaml  Basic packages to generate the image
+  |    |-repos.yaml     Name of the folder containing the files used by the image creation software to install the software packages (software-catalog)
+  |    
+  |- repo.yaml				Namespace description of this repository  (software-catalog-test)
+
+- packages folder: Contains all the spack packages folders
+- software_x : Subfolders to each Spack package
+- package.py : Installation file for the Spack package.
+- cfg folder : Spack configuration used by the Image Creation Service
+- packages.yaml : Basic packages to generate the image
+- repos.yaml : Name of the folder containing the files used by the image creation software to install the software packages (/software-catalog)
+- repo.yaml : Namespace description of the software catalog repository  (software-catalog-test)
