--- a/1.WF_SC_Repositories.md
+++ b/1.WF_SC_Repositories.md
@@ -24,16 +24,16 @@ workflow-registry
 ```
 software-catalog
   |- packages
-  |    |- software_1  Spack package name    
-  |    |    |- package.py		Installation description following the Spack package format
+  |    |- software_1     
+  |    |    |- package.py		
   |    |       ...
   |    |- software_2    
   |          ....
-  |- cfg				Spack configuration used by the Image Creation Service
-  |    |-packages.yaml  Basic packages to generate the image
-  |    |-repos.yaml     Name of the folder containing the files used by the image creation software to install the software packages (software-catalog)
+  |- cfg				
+  |    |-packages.yaml  
+  |    |-repos.yaml     
   |    
-  |- repo.yaml				Namespace description of this repository  (software-catalog-test)
+  |- repo.yaml				
 ```
 - packages folder: Contains all the spack packages folders
 - software_x : Subfolders to each Spack package
