--- a/1.WF_SC_Repositories.md
+++ b/1.WF_SC_Repositories.md
@@ -3,6 +3,9 @@
 ![Captura desde 2024-02-19 12-37-51](https://github.com/EvaHdez97/Image-creation-tutorial/assets/158464827/8377b287-5d93-4016-ac96-a8ea8b023648)
 
 ## Workflow Components
+
+Example Workflow Registry Repository: https://github.com/EvaHdez97/workflow-registry-test.git
+
 ```
 workflow-registry
   |- workflow_1
@@ -21,6 +24,9 @@ workflow-registry
 - src folder: Folder to save all necessary files for running the software.
 
 ## Software Catalog Components
+
+Example Software Catalog Repository: https://github.com/EvaHdez97/software-catalog-test.git
+
 ```
 software-catalog
   |- packages
