--- a/1.WF_SC_Repositories.md
+++ b/1.WF_SC_Repositories.md
@@ -20,7 +20,7 @@ workflow-registry
 ```
 - Workflow_1 subfolder: Name of the DTC (Digital Twin Component) and the initial type of the DTC (V-Volcano, T-Tsunami, E-Earthquake,...)
 - Step_1 subfolder: Name of the software of the DTC (METEO-GFS)
-- eflows4hpc.yaml file: Sofware requirements for this workflow step as a Spack environment specification (Contains the same information as the Spack.yaml file.)
+- eflows4hpc.yaml file: Software requirements for this workflow step as a Spack environment specification (Contains the same information as the Spack.yaml file.)
 - src folder: Folder to save all necessary files for running the software.
 
 ## Software Catalog Components
