--- a/2.DetermineProcessorMicroarchitecture.md
+++ b/2.DetermineProcessorMicroarchitecture.md
@@ -1,1 +1,39 @@
 # How to determine your processor microarchitecture
+
+We will use the processor microarchitecture to configure the image creation software. 
+If you already know the microarchitecture of your processor, you can skip this step.
+
+To determine the microarchitecture of our CPU processor, we utilized a Python package called "archspec". Archspec aims to provide a standardized set of human-understandable labels for various aspects of system architecture, such as CPU, network fabrics, etc., along with APIs to detect, query, and compare them.
+
+IMPORTANT: It is necessary to install Python3 before installing archspec.
+
+# Steps to install Archspec
+
+The archspec Python package needs poetry to be installed from VCS sources. The preferred method to install it is via its custom installer outside of any virtual environment:
+```
+curl -sSL https://install.python-poetry.org | python3 -
+```
+You can refer to Poetry's documentation for further details or for other methods to install this tool. You'll also need tox to run unit test:
+```
+pip install --user tox
+```
+Finally, you'll need to clone the repository:
+```
+git clone --recursive https://github.com/archspec/archspec.git
+```
+Running unit tests
+
+Once you have your environment ready you can run archspec unit tests using tox from the root of the repository:
+```
+$ tox
+  [ ... ]
+  py27: commands succeeded
+  py35: commands succeeded
+  py36: commands succeeded
+  py37: commands succeeded
+  py38: commands succeeded
+  pylint: commands succeeded
+  flake8: commands succeeded
+  black: commands succeeded
+  congratulations :)
+```
