--- a/2.DetermineProcessorMicroarchitecture.md
+++ b/2.DetermineProcessorMicroarchitecture.md
@@ -8,7 +8,7 @@ To determine the microarchitecture of our CPU processor, we utilized a Python pa
 
 IMPORTANT: It is necessary to install Python3 before installing archspec.
 
-# Steps to install Archspec
+## Steps to install Archspec
 
 The archspec Python package needs poetry to be installed from VCS sources. The preferred method to install it is via its custom installer outside of any virtual environment:
 ```
@@ -21,6 +21,7 @@ pip install --user tox
 Finally, you'll need to clone the repository:
 ```
 git clone --recursive https://github.com/archspec/archspec.git
+cd archspec
 ```
 Running unit tests
 
@@ -38,3 +39,65 @@ $ tox
   black: commands succeeded
   congratulations :)
 ```
+## How to use Archspec
+
+### Host detection
+
+Detection of the host where archspec is being run can be performed with a simple function call:
+```
+cd archspec
+python3
+>>> import archspec.cpu
+>>> host = archspec.cpu.host()
+```
+where the return value is a :py:class:`archspec.cpu.Microarchitecture` object. To obtain the label of the host one can simply convert this object to a string:
+```
+>>> str(host)
+'zen3'
+```
+If more information is needed the object can also be converted to a built-in dictionary:
+```
+>>> import pprint
+>>> pprint.pprint(host.to_dict())
+{'features': ['abm',
+              'aes',
+              'avx',
+              'avx2',
+              'bmi1',
+              'bmi2',
+              'clflushopt',
+              'clwb',
+              'clzero',
+              'cx16',
+              'f16c',
+              'fma',
+              'fsgsbase',
+              'mmx',
+              'movbe',
+              'pclmulqdq',
+              'pku',
+              'popcnt',
+              'rdseed',
+              'sse',
+              'sse2',
+              'sse4_1',
+              'sse4_2',
+              'sse4a',
+              'ssse3',
+              'vaes',
+              'vpclmulqdq',
+              'xsavec',
+              'xsaveopt'],
+ 'generation': 0,
+ 'name': 'zen3',
+ 'parents': ['zen2'],
+ 'vendor': 'AuthenticAMD'}
+```
+Once you obtain all this information, the label you must use to configure the image creation software is `parents`
+```
+'parents': ['zen2']
+```
+For more information you can consult this links:
+
+Link to Archspec github: https://github.com/archspec/archspec.git
+Link to Archspec usage: https://github.com/archspec/archspec/blob/master/docs/source/microarchitectures.rst
