--- a/2.DetermineProcessorMicroarchitecture.md
+++ b/2.DetermineProcessorMicroarchitecture.md
@@ -93,8 +93,9 @@ If more information is needed the object can also be converted to a built-in dic
  'parents': ['zen2'],
  'vendor': 'AuthenticAMD'}
 ```
-Once you obtain all this information, the label you must use to configure the image creation software is `parents`
+Once you obtain all this information, the label you must use to configure the image creation software is `parents` or `name`
 ```
+'name': 'zen3',
 'parents': ['zen2']
 ```
 For more information you can consult this links:
