--- a/3.CustomizeImageCreation.md
+++ b/3.CustomizeImageCreation.md
@@ -1,1 +1,25 @@
 # Download the image creation tutorial from eflows4HPC and customize it
+
+In this section of the tutorial, we are going to download all the necessary packages to create the Docker image with our customized repositories.
+
+## Install docker
+
+First of all, we need to install Docker on our operating system.
+
+https://docs.docker.com/engine/install/
+
+If you are using Linux, also take a look at the post-installation steps.
+
+## Running the Image Creation Software on Your Own Computer and Customizing It
+
+Once the Docker installation is complete, run the image creation container. This container already contains all the configuration files needed to create an example image. 
+We will start from these initial files to create our customized image.
+
+```
+docker run -v /var/run/docker.sock:/var/run/docker.sock -it ghcr.io/eflows4hpc/image_creation:compss_tutorial /bin/bash
+```
+If everything has gone well, you should see the following:
+```
+root@29f99468a739:/# ls
+bin  boot  dev  etc  home  image_creation  lib  lib32  lib64  libx32  media  mnt  opt  proc  root  run  sbin  software-catalog  srv  sys  tmp  usr  var
+```
