--- a/3.CustomizeImageCreation.md
+++ b/3.CustomizeImageCreation.md
@@ -23,3 +23,33 @@ If everything has gone well, you should see the following:
 root@29f99468a739:/# ls
 bin  boot  dev  etc  home  image_creation  lib  lib32  lib64  libx32  media  mnt  opt  proc  root  run  sbin  software-catalog  srv  sys  tmp  usr  var
 ```
+In this directory, rename the `software-catalog` folder to `software-catalog-old`, then clone your customized software catalog into this directory and rename it to `software-catalog`.
+```
+mv software-catalog/ software-catalog-old
+git clone https://github.com/EvaHdez97/software-catalog-test.git
+mv software-catalog-test/ software-catalog
+```
+The next step is to edit the configuration file to set up the customized workflow registry and the Docker Hub repository for the image.
+```
+vi image_creation/config/configuration.py 
+```
+Inside the file, change the "images_prefix" option. This option corresponds to the username of your Docker Hub account where you will store the images.
+```
+registry_cfg = {
+    "url" : None,
+    "user": None,
+    "token": None,
+    "images_prefix": "eflows4hpc/"
+    }
+```
+```
+registry_cfg = {
+    "url" : None,
+    "user": None,
+    "token": None,
+    "images_prefix": "evahdez/"
+    }
+```
+
+
+
