--- a/3.CustomizeImageCreation.md
+++ b/3.CustomizeImageCreation.md
@@ -33,6 +33,8 @@ The next step is to edit the configuration file to set up the customized workflo
 ```
 vi image_creation/config/configuration.py 
 ```
+Friendly reminder: to edit with the vim editor, press the `I` key.
+
 Inside the file, change the "images_prefix" option. This option corresponds to the username of your Docker Hub account where you will store the images.
 ```
 registry_cfg = {
@@ -50,6 +52,23 @@ registry_cfg = {
     "images_prefix": "evahdez/"
     }
 ```
+The second change to make inside this file is to replace the link to the GitHub repository of the workflow registry with our customized one.
+```
+repositories_cfg = {
+    "workflow_repository":"https://github.com/eflows4hpc/workflow-registry.git",
+    "software_repository":"/software-catalog/"
+    }
+```
+```
+repositories_cfg = {
+    "workflow_repository":"https://github.com/EvaHdez97/workflow-registry-test.git",
+    "software_repository":"/software-catalog/"
+    }
+```
+It is not necessary to change the "software_repository" option because we already changed the folder name when we cloned it earlier.
+Now you can save the file by pressing the "ESC" key, then typing ":wq", and finally pressing Enter.
+
+
 
 
 
