--- a/3.CustomizeImageCreation.md
+++ b/3.CustomizeImageCreation.md
@@ -69,6 +69,29 @@ It is not necessary to change the "software_repository" option because we alread
 
 Now you can save the file by pressing the "ESC" key, then typing ":wq", and finally pressing Enter.
 
+Now, we are going to create the request.json file to describe the operating system we are using, the architecture, the container engine, and the workflow description.
+```
+cd image_creation
+cp test_request.json request.json
+vi request.json
+```
+Following the example provided in this tutorial, the request.json file should look like this:
+```
+{
+    "machine": {
+         "platform": "linux/amd64", "architecture": "zen2", "container_engine": "docker" 
+         },
+    "workflow":"DTC-V2-TEST", 
+    "step_id" :"METEO-GFS-TEST", 
+    "force": "true",
+    "push": "false"
+}
+```
+Once all of this is configured, we can start the creation of the image with the following command:
+```
+python3 /image_creation/cic_builder.py --request=request.json
+```
+
 
 
 
