--- a/3.CustomizeImageCreation.md
+++ b/3.CustomizeImageCreation.md
@@ -91,7 +91,34 @@ Once all of this is configured, we can start the creation of the image with the 
 ```
 python3 /image_creation/cic_builder.py --request=request.json
 ```
+If everything has gone well, you should see the following:
+```
+#15 exporting to image
+#15 exporting layers
+#15 exporting layers 0.8s done
+#15 writing image sha256:43bcec2b07801c2febf4cb0285de2276eb7ff17e7534372fbf05798541ffdec1 done
+#15 naming to docker.io/evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu:latest done
+#15 DONE 0.8s
+IB: Image built
+IB: Elaspsed time 47.87759852409363 seconds.
 
+```
+You can perform the final verification using this command:
+
+```
+docker images
+REPOSITORY                                               TAG               IMAGE ID       CREATED              SIZE
+evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu      latest            43bcec2b0780   About a minute ago   2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu   latest            cf7acc54dfcf   23 hours ago         2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_aarch64_nompi_nogpu   version_v2        c06104b8cb6a   3 days ago           2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_aarch64_nompi_nogpu   latest            f3fd35a3f8fc   3 days ago           2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu      version_v2        7d42e450703e   4 days ago           2.03GB
+eflows4hpc/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu   latest            a8eb688a4433   5 days ago           2.03GB
+compss/compss-tutorial                                   3.3               c7299b31198c   3 weeks ago          3.1GB
+ghcr.io/eflows4hpc/image_creation                        compss_tutorial   87597f630686   3 weeks ago          1.54GB
+ghcr.io/eflows4hpc/spack_base                            0.20.1            73823d5e6a70   7 months ago         1.59GB
+hello-world                                              latest            d2c94e258dcb   9 months ago         13.3kB
+```
 
 
 
