--- a/4.PushImageDockerHub.md
+++ b/4.PushImageDockerHub.md
@@ -1,1 +1,47 @@
 # How to modify the created image and push it to a Docker Hub repository
+
+Once the image is created, you may want to add files or create directories to prepare for production.
+This section may assist you.
+
+## List docker images
+```
+docker images 
+```
+## Run an existing image
+```
+docker run -dt existing_image 
+```
+## See if container is running
+```
+docker ps
+# CONTAINER ID   IMAGE            COMMAND   CREATED              STATUS              
+# c7e6409a22bf   existing-image   "R"       6 minutes ago        Up 6 minutes
+```
+## If your container doesn't start use this command to check out the status
+```
+docker ps -a
+```
+## Shell into it
+```
+docker exec -it c7e6409a22bf bash
+```
+## Make a new directory for demonstration purposes
+```
+# (note that this is inside the existing image)
+mkdir NEWDIRECTORY
+```
+## Open another terminal tab/window, and save the running container you modified
+```
+docker commit c7e6409a22bf my-new-image
+```
+## Inspect to ensure it saved correctly
+```
+docker image ls
+# REPOSITORY           TAG       IMAGE ID       CREATED         SIZE
+# existing-image       latest    a7dde5d84fe5   7 minutes ago   888MB
+# my-new-image         latest    d57fd15d5a95   2 minutes ago   888MB
+```
+## Stop docker container
+```
+docker stop c7e6409a22bf
+```
