--- a/4.PushImageDockerHub.md
+++ b/4.PushImageDockerHub.md
@@ -5,17 +5,32 @@ This section may assist you.
 
 ## List docker images
 ```
-docker images 
+docker images
+
+REPOSITORY                                               TAG               IMAGE ID       CREATED        SIZE
+evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu      latest            43bcec2b0780   3 hours ago    2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu   latest            cf7acc54dfcf   26 hours ago   2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_aarch64_nompi_nogpu   version_v2        c06104b8cb6a   4 days ago     2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_aarch64_nompi_nogpu   latest            f3fd35a3f8fc   4 days ago     2.03GB
+evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu      version_v2        7d42e450703e   4 days ago     2.03GB
+eflows4hpc/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu   latest            a8eb688a4433   5 days ago     2.03GB
+marcmartinezsepulveda/geo3bcn-map-service                latest            605154f23388   2 weeks ago    42.6MB
+moby/buildkit                                            buildx-stable-1   480495983c47   2 weeks ago    172MB
+compss/compss-tutorial                                   3.3               c7299b31198c   3 weeks ago    3.1GB
+ghcr.io/eflows4hpc/image_creation                        compss_tutorial   87597f630686   3 weeks ago    1.54GB
+ghcr.io/eflows4hpc/spack_base                            0.20.1            73823d5e6a70   7 months ago   1.59GB
+hello-world                                              latest            d2c94e258dcb   9 months ago   13.3kB
+
 ```
 ## Run an existing image
 ```
-docker run -dt existing_image 
+docker run -dt evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:latest
 ```
 ## See if container is running
 ```
 docker ps
-# CONTAINER ID   IMAGE            COMMAND   CREATED              STATUS              
-# c7e6409a22bf   existing-image   "R"       6 minutes ago        Up 6 minutes
+# CONTAINER ID   IMAGE                                                           COMMAND   CREATED              STATUS              
+# c7e6409a22bf   evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:latest   "R"       6 minutes ago        Up 6 minutes
 ```
 ## If your container doesn't start use this command to check out the status
 ```
@@ -32,16 +47,21 @@ mkdir NEWDIRECTORY
 ```
 ## Open another terminal tab/window, and save the running container you modified
 ```
-docker commit c7e6409a22bf my-new-image
+docker commit c7e6409a22bf evahdez/dtc-v2-test_meteo-gfs-test_sky_nompi_nogpu:version_v2
 ```
 ## Inspect to ensure it saved correctly
 ```
 docker image ls
-# REPOSITORY           TAG       IMAGE ID       CREATED         SIZE
-# existing-image       latest    a7dde5d84fe5   7 minutes ago   888MB
-# my-new-image         latest    d57fd15d5a95   2 minutes ago   888MB
+# REPOSITORY                                                 TAG         IMAGE ID       CREATED         SIZE
+# evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu         latest      a7dde5d84fe5   7 minutes ago   888MB
+# evahdez/dtc-v2-test_meteo-gfs-test_sky_nompi_nogpu         version_v2  d57fd15d5a95   2 minutes ago   888MB
 ```
 ## Stop docker container
 ```
 docker stop c7e6409a22bf
+```
+## Push image to docker Hub
+```
+sudo docker login
+docker push evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu:version_v2
 ```
