--- a/4.PushImageDockerHub.md
+++ b/4.PushImageDockerHub.md
@@ -51,7 +51,7 @@ docker commit c7e6409a22bf evahdez/dtc-v2-test_meteo-gfs-test_sky_nompi_nogpu:ve
 ```
 ## Inspect to ensure it saved correctly
 ```
-docker image ls
+docker images
 # REPOSITORY                                                 TAG         IMAGE ID       CREATED         SIZE
 # evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu         latest      a7dde5d84fe5   7 minutes ago   888MB
 # evahdez/dtc-v2-test_meteo-gfs-test_sky_nompi_nogpu         version_v2  d57fd15d5a95   2 minutes ago   888MB
