--- a/4.PushImageDockerHub.md
+++ b/4.PushImageDockerHub.md
@@ -65,3 +65,12 @@ docker stop c7e6409a22bf
 sudo docker login
 docker push evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:version_v2
 ```
+## EXTRA
+## How to pull an image from Docker Hub
+```
+docker pull evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:version_v2
+```
+## How to shell into an image without creating a container
+```
+docker run -it evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu:latest bash
+```
