--- a/4.PushImageDockerHub.md
+++ b/4.PushImageDockerHub.md
@@ -74,3 +74,7 @@ docker pull evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:version_v2
 ```
 docker run -it evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu:latest bash
 ```
+## How to export a file from docker container
+```
+docker cp <container_name_or_id>:/path/to/container/file /path/to/local/destination
+```
