--- a/5.ConvertDockerIToSingF.md
+++ b/5.ConvertDockerIToSingF.md
@@ -3,9 +3,43 @@
 
 ## Convert Docker image to singularity image
 ```
-singularity build <singularity_image_name>.sif docker://<docker_image_name>:<tag>
+sudo singularity build <singularity_image_name>.sif docker://<docker_image_name>:<tag>
+```
+Example:
+```
+sudo singularity build dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu_version_v2.sif docker://evahdez/dtc-v2-test_meteo-gfs_test_linuxamd64_zen3_nompi_nogpu:version_v2
+INFO:    Starting build...
+INFO:    Fetching OCI image...
+170.6KiB / 170.6KiB [=======================================================================================================================================================================] 100 % 0.0 b/s 0s
+4.2MiB / 4.2MiB [===========================================================================================================================================================================] 100 % 0.0 b/s 0s
+11.1MiB / 11.1MiB [=========================================================================================================================================================================] 100 % 0.0 b/s 0s
+123.8MiB / 123.8MiB [=======================================================================================================================================================================] 100 % 0.0 b/s 0s
+27.3MiB / 27.3MiB [=========================================================================================================================================================================] 100 % 0.0 b/s 0s
+149.4MiB / 149.4MiB [=======================================================================================================================================================================] 100 % 0.0 b/s 0s
+259.7MiB / 259.7MiB [=======================================================================================================================================================================] 100 % 0.0 b/s 0s
+197.5MiB / 197.5MiB [=======================================================================================================================================================================] 100 % 0.0 b/s 0s
+INFO:    Extracting OCI image...
+INFO:    Inserting Singularity configuration...
+INFO:    Creating SIF file...
+INFO:    Build complete: dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu_version_v2.sif
+
 ```
 ## Verify the Image
 ```
-singularity inspect <singularity_image_name>.sif
+sudo singularity inspect <singularity_image_name>.sif
+```
+Example:
+```
+sudo singularity inspect dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu_version_v2.sif
+
+org.label-schema.build-arch: amd64
+org.label-schema.build-date: Tuesday_20_February_2024_15:43:37_CET
+org.label-schema.schema-version: 1.0
+org.label-schema.usage.singularity.deffile.bootstrap: docker
+org.label-schema.usage.singularity.deffile.from: evahdez/dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu:version_v2
+org.label-schema.usage.singularity.version: 4.1.1
+org.opencontainers.image.ref.name: ubuntu
+org.opencontainers.image.source: https://github.com/eflows4hpc/image_creation
+org.opencontainers.image.version: 20.04
+
 ```
