--- a/5.ConvertDockerIToSingF.md
+++ b/5.ConvertDockerIToSingF.md
@@ -1,13 +1,13 @@
 # How to convert a docker image to singularity file
 
 
-## Convert Docker image to singularity image
+## Convert Docker image to singularity image making the image writable
 ```
-sudo singularity build <singularity_image_name>.sif docker://<docker_image_name>:<tag>
+sudo singularity build --sandbox <singularity_image_name>.sif docker://<docker_image_name>:<tag>
 ```
 Example:
 ```
-sudo singularity build dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu_version_v2.sif docker://evahdez/dtc-v2-test_meteo-gfs_test_linuxamd64_zen3_nompi_nogpu:version_v2
+sudo singularity build --sandbox dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu_version_v2.sif docker://evahdez/dtc-v2-test_meteo-gfs_test_linuxamd64_zen3_nompi_nogpu:version_v2
 
 INFO:    Starting build...
 INFO:    Fetching OCI image...
@@ -43,4 +43,8 @@ org.opencontainers.image.ref.name: ubuntu
 org.opencontainers.image.source: https://github.com/eflows4hpc/image_creation
 org.opencontainers.image.version: 20.04
 
+```
+## Shell into it
+```
+singularity shell --writable test_image.sif/
 ```
