--- a/4.PushImageDockerHub(Revisar).md
+++ b/4.PushImageDockerHub(Revisar).md
@@ -1,9 +1,10 @@
-# How to modify the created image and push it to a Docker Hub repository
+# How to Modify the Created Image, Build for Other Operating Systems, and Push It to a Docker Hub Repository
 
-Once the image is created, you may want to add files or create directories to prepare for production.
-This section may assist you.
+Once the image is created, you may want to add files or create directories to prepare for production or adapt this image to test it in other operating systems that are not Linux. This section may assist you.
 
-## List docker images
+## Modify a docker image 
+
+### List docker images
 ```
 docker images
 
@@ -22,41 +23,41 @@ ghcr.io/eflows4hpc/spack_base                            0.20.1            73823
 hello-world                                              latest            d2c94e258dcb   9 months ago   13.3kB
 
 ```
-## Run an existing image
+### Run an existing image
 ```
 docker run -dt evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:latest
 ```
-## See if container is running
+### See if container is running
 ```
 docker ps
 # CONTAINER ID   IMAGE                                                           COMMAND   CREATED              STATUS              
 # c7e6409a22bf   evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:latest   "R"       6 minutes ago        Up 6 minutes
 ```
-## If your container doesn't start use this command to check out the status
+### If your container doesn't start use this command to check out the status
 ```
 docker ps -a
 ```
-## Shell into it
+### Shell into it
 ```
 docker exec -it c7e6409a22bf bash
 ```
-## Make a new directory for demonstration purposes
+### Make a new directory for demonstration purposes
 ```
 # (note that this is inside the existing image)
 mkdir NEWDIRECTORY
 ```
-## Open another terminal tab/window, and save the running container you modified
+### Open another terminal tab/window, and save the running container you modified
 ```
 docker commit c7e6409a22bf evahdez/dtc-v2-test_meteo-gfs-test_sky_nompi_nogpu:version_v2
 ```
-## Inspect to ensure it saved correctly
+### Inspect to ensure it saved correctly
 ```
 docker images
 # REPOSITORY                                                 TAG         IMAGE ID       CREATED         SIZE
 # evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu         latest      a7dde5d84fe5   7 minutes ago   888MB
 # evahdez/dtc-v2-test_meteo-gfs-test_sky_nompi_nogpu         version_v2  d57fd15d5a95   2 minutes ago   888MB
 ```
-## Stop docker container
+### Stop docker container
 ```
 docker stop c7e6409a22bf
 ```
@@ -65,7 +66,6 @@ docker stop c7e6409a22bf
 sudo docker login
 docker push evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:version_v2
 ```
-## EXTRA
 ## How to pull an image from Docker Hub
 ```
 docker pull evahdez/dtc-v2-test_meteo-gfs-test_skylake_nompi_nogpu:version_v2
@@ -78,3 +78,44 @@ docker run -it evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu:latest bash
 ```
 docker cp <container_name_or_id>:/path/to/container/file /path/to/local/destination
 ```
+## How to build a docker image to test it in other operating system
+IMPORTANT: Run all this commands on the operating system where you want to test the image.
+The first step is to create a Dockerfile. It contains the information about the image that we want to rebuild for this operating system and additional commands that will be executed after the build is finished.
+```
+nano Dockerfile
+```
+Information inside Dockerfile
+```
+FROM evahdez/dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu:version_v2
+RUN apt-get update
+```
+FROM: Specify the base image we want to rebuild.
+RUN: Define the commands to be executed after the build has finished.
+
+Save the Dockerfile and execute the following command:
+NOTE: Execute this command in the same directory where the Dockerfile is located.
+```
+docker build -t evahdez/newimagename:latest .
+
+[+] Building 0.1s (6/6) FINISHED                                                                                                                                                               docker:default
+ => [internal] load build definition from Dockerfile                                                                                                                                                     0.0s
+ => => transferring dockerfile: 136B                                                                                                                                                                     0.0s
+ => [internal] load metadata for docker.io/evahdez/dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu:version_v2                                                                                     0.0s
+ => [internal] load .dockerignore                                                                                                                                                                        0.0s
+ => => transferring context: 2B                                                                                                                                                                          0.0s
+ => [1/2] FROM docker.io/evahdez/dtc-v2-test_meteo-gfs-test_linuxamd64_zen3_nompi_nogpu:version_v2                                                                                                       0.0s
+ => CACHED [2/2] RUN apt-get update                                                                                                                                                                      0.0s
+ => exporting to image                                                                                                                                                                                   0.0s
+ => => exporting layers                                                                                                                                                                                  0.0s
+ => => writing image sha256:634d2ff73b8e949d78c7942097c069c87d8a33278443c6f4cc177d8a821512c2                                                                                                             0.0s
+ => => naming to docker.io/evahdez/newimagename:latest                                                                                                                                                   0.0s
+
+What's Next?
+  View a summary of image vulnerabilities and recommendations → docker scout quickview
+
+```
+
+
+
+
+
