--- a/4.PushImageDockerHub(Revisar).md
+++ b/4.PushImageDockerHub(Revisar).md
@@ -116,8 +116,20 @@ What's Next?
   View a summary of image vulnerabilities and recommendations → docker scout quickview
 
 ```
-
-
-
+To verify if the image has been created, you can list the Docker images by executing the following command:
+```
+docker images
+REPOSITORY                                                       TAG               IMAGE ID       CREATED        SIZE
+evahdez/newimagename                                             latest            634d2ff73b8e   46 hours ago   2.08GB
+evahdez/dtc-v2_meteo-gfs-linuxamd64                              version_v3        634d2ff73b8e   46 hours ago   2.08GB
+```
+### Run the new image in Linux
+```
+docker container run -it evahdez/newimagename:latest
+```
+### Run the new image in MACOS SILICOM M1
+```
+ docker run --rm -it --platform linux/amd64 evahdez/newimagename:latest bash
+```
 
 
