--- a/4.PushImageDockerHub(Revisar).md
+++ b/4.PushImageDockerHub(Revisar).md
@@ -78,6 +78,10 @@ docker run -it evahdez/dtc-v2-test_meteo-gfs-test_zen2_nompi_nogpu:latest bash
 ```
 docker cp <container_name_or_id>:/path/to/container/file /path/to/local/destination
 ```
+## How to import a file to docker container
+```
+docker cp /path/to/local/destination <container_name_or_id>:/path/to/container/file
+```
 ## How to build a docker image to test it in other operating system
 IMPORTANT: Run all this commands on the operating system where you want to test the image.
 The first step is to create a Dockerfile. It contains the information about the image that we want to rebuild for this operating system and additional commands that will be executed after the build is finished.
