--- a/3.CustomizeImageCreation.md
+++ b/3.CustomizeImageCreation.md
@@ -65,6 +65,19 @@ repositories_cfg = {
     "software_repository":"/software-catalog/"
     }
 ```
+The final change to make inside this file is to modify the "base_image" option to allow the creation of images that do not use spack.
+```
+build_cfg = {
+    "tmp_folder":"/tmp",
+    "builder_home": "/image_creation/",
+    "base_image": "ghcr.io/eflows4hpc/image_creation:0.0.4",
+    "dockerfile": "Dockerfile.spack",
+    "spack_cfg":"/software-catalog/cfg",
+    "max_concurrent_builds" : 3,
+    "singularity_sudo" : False
+    }
+```
+
 It is not necessary to change the "software_repository" option because we already changed the folder name when we cloned it earlier.
 
 Now you can save the file by pressing the "ESC" key, then typing ":wq", and finally pressing Enter.
