--- a/3.CustomizeImageCreation.md
+++ b/3.CustomizeImageCreation.md
@@ -16,7 +16,7 @@ Once the Docker installation is complete, run the image creation container. This
 We will start from these initial files to create our customized image.
 
 ```
-docker run -v /var/run/docker.sock:/var/run/docker.sock -it ghcr.io/eflows4hpc/image_creation:compss_tutorial /bin/bash
+docker run -v /var/run/docker.sock:/var/run/docker.sock -it ghcr.io/eflows4hpc/image_creation:0.0.4 /bin/bash
 ```
 If everything has gone well, you should see the following:
 ```
@@ -63,18 +63,6 @@ repositories_cfg = {
 repositories_cfg = {
     "workflow_repository":"https://github.com/EvaHdez97/workflow-registry-test.git",
     "software_repository":"/software-catalog/"
-    }
-```
-The final change to make inside this file is to modify the "base_image" option to allow the creation of images that do not use spack.
-```
-build_cfg = {
-    "tmp_folder":"/tmp",
-    "builder_home": "/image_creation/",
-    "base_image": "ghcr.io/eflows4hpc/image_creation:0.0.4",
-    "dockerfile": "Dockerfile.spack",
-    "spack_cfg":"/software-catalog/cfg",
-    "max_concurrent_builds" : 3,
-    "singularity_sudo" : False
     }
 ```
 
